--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -19,3 +19,32 @@ login_new_additionalData=Weitere Informationen zur Ablieferung
 
 login_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht länger als 255 Zeichen sein.
 login_new_account_institutionNameHelp=Wenn Sie keinen Organisationsnamen haben, weil Sie ein privater Ablieferer sind, geben Sie Ihren Namen bitte erneut ein.
+
+plugin_dashboard_deliveryWellcomeMessage=Hallo {0}, Sie haben folgende Auswahlm\u00F6glichkeiten:
+
+
+plugin_dashboard_deliverJournalsHeader=Periodische Publikation hochladen
+plugin_dashboard_deliverJournals=Zeitschriften, Newsletter, alles was regelm\u00E4ssig erscheint
+plugin_dashboard_deliverJournalsButton=Publikation hochladen
+
+plugin_dashboard_deliverMonographHeader=Monografie hochladen
+plugin_dashboard_deliverMonograph=Romane, Artikel, Veranstaltungsberichte, Publikationen, die f\u00FCr sich allein stehen
+plugin_dashboard_deliverMonographButton=Monografie hochladen
+
+plugin_dashboard_deliverHelpHeader=E-Pflicht-Hilfe
+plugin_dashboard_deliverHelp=Lernen Sie das E-Pflicht System der ZLB kennen, bevor Sie Publikationen hochladen
+plugin_dashboard_deliverHelpButton=Hilfethemen ansehen
+
+
+
+plugin_dashboard_delivery_upload=Upload
+plugin_dashboard_delivery_data1=Daten eingeben I
+plugin_dashboard_delivery_data2=Daten eingeben II
+plugin_dashboard_delivery_data3=Daten eingeben III
+plugin_dashboard_delivery_overview=\u00DCbersicht
+plugin_dashboard_delivery_finish=Ende
+
+plugin_dashboard_deliverShowDataHeader=Eigene Daten bearbeiten
+plugin_dashboard_deliverShowData=Hier können die erfassten Nutzerdaten eingesehen und bearbeitet werden.
+plugin_dashboard_deliverShowDataButton=Daten bearbeiten
+
