--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -1,3 +1,96 @@
+intranda_administration_snippetCreator=Snippet Creator
+plugin_administration_snippet_metadataName=Interner Name
+plugin_administration_snippet_displayNameGer=Bezeichnung (de)
+plugin_administration_snippet_displayNameEng=Bezeichnung (en)
+plugin_administration_snippet_displayName=Bezeichnung ({0})
+plugin_administration_snippet_contentDefinition=Definition der Inhalte
+plugin_administration_snippet_elementList=Liste der Elemente
+plugin_administration_snippet_snippets=Snippets
+plugin_administration_snippet_type=Typ
+metadata=Metadatum
+person=Person
+corporate=K\u00F6rperschaft
+
+plugin_administration_snippet_exportXpath=MODS Export XPath
+plugin_administration_snippet_marcImport=MARC-Import
+plugin_administration_snippet_picaImport=PICA-Import
+plugin_administration_snippet_normdata=Normdaten erlaubt
+plugin_administration_snippet_generateSnippets=Hinzuf\u00FCgen
+plugin_administration_snippet_upload=Upload
+plugin_administration_snippet_download=Download
+
+
+plugin_administration_snippet_goobiConfig=goobi_config.properties
+plugin_administration_snippet_messages_de=messages_de.properties
+plugin_administration_snippet_messages_en=messages_en.properties
+plugin_administration_snippet_messages=messages_{0}.properties
+plugin_administration_snippet_ruleset_metadataDefinition=Regelsatz - Metadaten
+plugin_administration_snippet_ruleset_docstructs=Regelsatz - Strukturelemente
+plugin_administration_snippet_ruleset_marcImport=Regelsatz - MARC-Import
+plugin_administration_snippet_ruleset_picaImport=Regelsatz - Pica-Import
+plugin_administration_snippet_ruleset_export=Regelsatz - METS-Export
+
+plugin_administration_snippet_cardinality=Kardinalit\u00E4t
+plugin_administration_snippet_cardinality_zeroOrOne=maximal einmal
+plugin_administration_snippet_cardinality_one=genau einmal
+plugin_administration_snippet_cardinality_oneOrMore=einmal oder mehr
+plugin_administration_snippet_cardinality_any=beliebig oft
+plugin_administration_snippet_defaultDisplay=Leeres Feld anzeigen
+plugin_administration_snippet_goobi=Goobi
+plugin_administration_snippet_viewer=Viewer
+
+plugin_administration_snippet_viewerConfig=config_viewer.xml
+plugin_administration_snippet_indexerConfig=solr_indexerconfig.xml
+
+plugin_administration_snippet_metadata=Metadaten
+plugin_administration_snippet_group=Gruppen
+
+plugin_administration_snippet_addRow=Neue Zeile
+plugin_administration_snippet_deleteRow=Letzte Zeile lu00F6schen
+
+plugin_administration_snippet_groupName=Interner Name
+plugin_administration_snippet_metadata=Metadatum
+
+
+intranda_workflow_entity_editor=Entity Edition
+plugin_workflow_entity_editor_linkedArtists=Linked Artists
+plugin_workflow_entity_editor_linkedWork=Linked Works
+plugin_workflow_entity_editor_linkedAgencies=Linked Institutions
+plugin_workflow_entity_editor_linkedAwards=Linked Awards
+plugin_workflow_entity_editor_linkedEvents=Linked Events
+
+
+plugin_workflow_entity_editor_sourceUrl=PURL
+plugin_workflow_entity_editor_sourcePage=Pages
+
+plugin_workflow_entity_editor_sourceName=Source
+plugin_workflow_entity_editor_searchTerm=Search term
+plugin_workflow_entity_editor_beginnDate=Beginn date
+plugin_workflow_entity_editor_endDate=End date
+plugin_workflow_entity_editor_type=Type
+plugin_workflow_entity_editor_additionalData=Award type
+plugin_workflow_entity_createBibliography=Generate Bibliography
+plugin_workflow_entity_linkType=Link entities of type
+plugin_workflow_entity_editor_relationshipType=Relationship type
+plugin_workflow_entity_exportSingleRecord=Export and publish this entity
+plugin_workflow_entity_exportRecordWithDependencies=Export entity and all linked entities
+plugin_workflow_entity_exit=Go to dashboard
+plugin_workflow_entity_header=Edit {0}: {1}
+plugin_workflow_entity_addTabs=Add to tabs
+plugin_workflow_entity_searchTabsHeader={0} to edit
+plugin_workflow_entity_searchTabsHeaderAllTypes=Entities to edit
+plugin_workflow_entity_editor_entityType=Entity type
+plugin_workflow_entity_edit_header=Edit {0}
+plugin_workflow_entity_link_header=Linked {0} ({1})
+plugin_workflow_entity_createEntity=Create new entity
+
+plugin_workflow_entity_sourceName=Name
+plugin_workflow_entity_sourceStatus=Status
+plugin_workflow_entity_sourceAction=Action
+plugin_workflow_entity_sourceChangeDate=Last modified
+intranda_dashboard_entity=Artist Dictionary Overview
+
+
 login_new_account_confirmPrivacyStatement=Ja, ich habe die Datenschutzerkl\u00E4rung gelesen und akzeptiere diese.
 
 intranda_administration_deliveryManagement=Verwaltung von Abliefernden
@@ -5,7 +98,7 @@ displayMode_institution=Einrichtungen
 displayMode_user=Benutzer
 displayMode_privacyPolicy=Datenschutzerkl\u00E4rung
 
-login_new_institution=Daten über abliefernde Institution oder Person
+login_new_institution=Daten Ã¼ber abliefernde Institution oder Person
 login_new_account_institutionName=Name der abliefernden Institution/Organisation oder Person
 
 login_new_account_password=Passwort
@@ -17,8 +110,9 @@ login_new_contact=Kontaktperson
 login_new_activation=Daten\u00FCbersicht und Antrag auf Freischaltung
 login_new_additionalData=Weitere Informationen zur Ablieferung
 
-login_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht länger als 255 Zeichen sein.
+login_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht lÃ¤nger als 255 Zeichen sein.
 login_new_account_institutionNameHelp=Wenn Sie keinen Organisationsnamen haben, weil Sie ein privater Ablieferer sind, geben Sie Ihren Namen bitte erneut ein.
+
 
 plugin_dashboard_deliveryWellcomeMessage=Hallo {0}, Sie haben folgende Auswahlm\u00F6glichkeiten:
 
@@ -45,6 +139,15 @@ plugin_dashboard_delivery_overview=\u00DCbersicht
 plugin_dashboard_delivery_finish=Ende
 
 plugin_dashboard_deliverShowDataHeader=Eigene Daten bearbeiten
-plugin_dashboard_deliverShowData=Hier können die erfassten Nutzerdaten eingesehen und bearbeitet werden.
+plugin_dashboard_deliverShowData=Hier kÃ¶nnen die erfassten Nutzerdaten eingesehen und bearbeitet werden.
 plugin_dashboard_deliverShowDataButton=Daten bearbeiten
+
+plugin_dashboard_deliverNewJournalTitleHeader=Neuen Titel erfassen
+plugin_dashboard_deliverNewJournalTitle=Hier kann ein neuer Zeitschriftentitel erfasst werden. Der Titel muss angelegt werden, bevor einzelne Jahrg\u00E4nge oder Hefte importiert werden kÃ¶nnen.
+plugin_dashboard_deliverNewJournalTitleButton=Neuen Titel erfassen
+
+plugin_dashboard_deliverNewJournalIssueHeader=Ausgabe hinzuf\u00FCgen
+plugin_dashboard_deliverNewIssueTitle=Hier kann eine Ausgabe zu einem existierenden Titel hinzugef\u00FCgt werden.
+plugin_dashboard_deliverNewIssueTitleButton=Ausgabe hinzuf\u00FCgen
+
 
