--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -150,4 +150,14 @@ plugin_dashboard_deliverNewJournalIssueHeader=Ausgabe hinzuf\u00FCgen
 plugin_dashboard_deliverNewIssueTitle=Hier kann eine Ausgabe zu einem existierenden Titel hinzugef\u00FCgt werden.
 plugin_dashboard_deliverNewIssueTitleButton=Ausgabe hinzuf\u00FCgen
 
+plugin_dashboard_deliverUserData=Account verwalten
+plugin_dashboard_deliverUserDataTitle=Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+plugin_dashboard_deliverUserDataButton=Account verwalten
 
+plugin_dashboard_deliverInstitutionData=Einrichtung verwalten
+plugin_dashboard_deliverInstitutionDataTitle=aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+plugin_dashboard_deliverInstitutionDataButton=Einrichtung verwalten
+
+plugin_dashboard_deliverContactPersonData=Kontaktperson verwalten
+plugin_dashboard_deliverContactPersonDataTitle=sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+plugin_dashboard_deliverContactPersonDataButton=Kontaktperson verwalten
