--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -161,3 +161,7 @@ plugin_dashboard_deliverInstitutionDataButton=Einrichtung verwalten
 plugin_dashboard_deliverContactPersonData=Kontaktperson verwalten
 plugin_dashboard_deliverContactPersonDataTitle=sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 plugin_dashboard_deliverContactPersonDataButton=Kontaktperson verwalten
+
+plugin_dashboard_deliverShowExistingDataHeader=Bisherige Datenlieferungen
+plugin_dashboard_deliverShowExistingData=Auflistung bisheriger Datenlieferungen
+plugin_dashboard_deliverShowExistingDataButton=Datenlieferungen verwalten
