--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -1,11 +1,11 @@
-login_new_account_confirmPrivacyStatement=Ja, ich habe die Datenschutzerkl\u00E4rung gelesen und akzeptiere diese.
+login_new_account_confirmPrivacyStatement=Ja, ich habe die <a data-bs-toggle="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
 
 intranda_administration_deliveryManagement=Verwaltung von Abliefernden
 displayMode_institution=Einrichtungen
 displayMode_user=Benutzer
 displayMode_privacyPolicy=Datenschutzerkl\u00E4rung
 
-login_new_institution=Daten Ã¼ber abliefernde Institution oder Person
+login_new_institution=Daten über abliefernde Institution oder Person
 login_new_account_institutionName=Name der abliefernden Institution/Organisation oder Person
 
 login_new_account_password=Passwort
@@ -17,7 +17,7 @@ login_new_contact=Kontaktperson
 login_new_activation=Daten\u00FCbersicht und Antrag auf Freischaltung
 login_new_additionalData=Weitere Informationen zur Ablieferung
 
-login_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht lÃ¤nger als 255 Zeichen sein.
+login_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht länger als 255 Zeichen sein.
 login_new_account_institutionNameHelp=Wenn Sie keinen Organisationsnamen haben, weil Sie ein privater Ablieferer sind, geben Sie Ihren Namen bitte erneut ein.
 
 
@@ -46,16 +46,18 @@ plugin_dashboard_delivery_overview=\u00DCbersicht
 plugin_dashboard_delivery_finish=Ende
 
 plugin_dashboard_deliverShowDataHeader=Eigene Daten bearbeiten
-plugin_dashboard_deliverShowData=Hier kÃ¶nnen die erfassten Nutzerdaten eingesehen und bearbeitet werden.
+plugin_dashboard_deliverShowData=Hier können die erfassten Nutzerdaten eingesehen und bearbeitet werden.
 plugin_dashboard_deliverShowDataButton=Daten bearbeiten
 
 plugin_dashboard_deliverNewJournalTitleHeader=Neuen Titel erfassen
-plugin_dashboard_deliverNewJournalTitle=Hier kann ein neuer Zeitschriftentitel erfasst werden. Der Titel muss angelegt werden, bevor einzelne Jahrg\u00E4nge oder Hefte importiert werden kÃ¶nnen.
+plugin_dashboard_deliverNewJournalTitle=Hier kann ein neuer Zeitschriftentitel erfasst werden. Der Titel muss angelegt werden, bevor einzelne Jahrg\u00E4nge oder Hefte importiert werden können.
 plugin_dashboard_deliverNewJournalTitleButton=Neuen Titel erfassen
 
 plugin_dashboard_deliverNewJournalIssueHeader=Ausgabe hinzuf\u00FCgen
 plugin_dashboard_deliverNewIssueTitle=Hier kann eine Ausgabe zu einem existierenden Titel hinzugef\u00FCgt werden.
 plugin_dashboard_deliverNewIssueTitleButton=Ausgabe hinzuf\u00FCgen
+
+
 
 plugin_dashboard_deliverUserData=Account verwalten
 plugin_dashboard_deliverUserDataTitle=Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
@@ -72,3 +74,19 @@ plugin_dashboard_deliverContactPersonDataButton=Kontaktperson verwalten
 plugin_dashboard_deliverShowExistingDataHeader=Bisherige Datenlieferungen
 plugin_dashboard_deliverShowExistingData=Auflistung bisheriger Datenlieferungen
 plugin_dashboard_deliverShowExistingDataButton=Datenlieferungen verwalten
+
+
+displayMode_zdbTitleData=ZDB Titeldaten
+process_grid_DocLanguage=Sprache
+process_grid_PublicationRun=Nummerierung der Erstausgabe
+process_grid_PublicationStart=Erscheinungsdatum der ersten Ausgabe
+
+
+
+login_new_account_resetPassword=Passwort zur\u00FCcksetzen
+
+page1=Account
+page2=Eigene Daten
+page3=Einrichtung
+page4=Ansprechpartner
+page5=\u00DCbersicht
