validate institution short name

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -91,8 +91,11 @@ page3=Ansprechpartner
 page4=Ablieferung
 page5=\u00DCbersicht
 
-login_new_account_confirmEmail=Wir haben eine Mail mit einem Best\u00E4tigungslink verschickt. Diese bitte \u00F6ffnen und den Link anklicken. 
+login_new_account_confirmEmail=Sie haben sich erfolgreich registriert. Bitte wechseln Sie nun in Ihr E-Mail Postfach und best\u00E4tigen Sie ihre E-Mail Adresse </br></br> Danach werden Sie aufgefordert, Ihre Daten zu vervollst\u00E4ndigen.
 login_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden.
 
-login_new_account_institutionShortNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht länger als 6 Zeichen sein. Es dürfen nur Buchstaben und Zahlen verwendet werden.
+login_new_account_institutionShortNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 6 Zeichen sein. Es d\u00FCrfen nur Buchstaben und Zahlen verwendet werden.
+login_new_account_institutionShortNameInUse=Dieses K\u00FCrzel ist bereits in Benutzung, bitte w\u00E4len Sie ein anderes.
 login_new_account_institutionShortName=K\u00FCrzel
+
+login_new_account_userIsContactPerson=Ich bin die Kontaktperson f\u00FCr meine Organisation (Daten werden automatisch \u00FCbernommen)
