second contact person

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -99,3 +99,10 @@ login_new_account_institutionShortNameInUse=Dieses K\u00FCrzel ist bereits in Be
 login_new_account_institutionShortName=K\u00FCrzel
 
 login_new_account_userIsContactPerson=Ich bin die Kontaktperson f\u00FCr meine Organisation (Daten werden automatisch \u00FCbernommen)
+
+login_new_account_activation=Hiermit beantrage ich die Freischaltung zur Ablieferung digitaler Pflichtpublikationen
+
+login_new_account_activationNotSet=Die Checkbox zur Freischaltung wurde nicht aktiviert.
+login_new_account_privacyTextNotAcccepted=Die Datenschutzerkl\u00E4rung wurde noch nicht akzeptiert.
+
+login_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
