Add messages => mainly help text; refs #22612

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -106,3 +106,29 @@ login_new_account_activationNotSet=Die Checkbox zur Freischaltung wurde nicht ak
 login_new_account_privacyTextNotAcccepted=Die Datenschutzerkl\u00E4rung wurde noch nicht akzeptiert.
 
 login_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
+
+plugin_rest_usercreation_requiredFields=Mit <span class\="info-required__asterisk">*</span> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
+plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
+
+plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
+
+plugin_rest_usercreation_requiredFields=Mit <span class\="info-required__asterisk">*</span> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
+
+plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
+plugin_rest_usercreation_ariaLabel_elementHelp=Hilfe zu diesem Element anzeigen
+plugin_rest_usercreation_ariaLabel_helpModal=In diesem Modal werden Hilfetexte angezeigt
+
+
+plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
+plugin_rest_usercreation_helpText_firstname=Bitte tragen Sie Ihren Vornamen ein.
+plugin_rest_usercreation_helpText_lastname=Wie d\u00FCrfen wir Sie ansprechen? Bitte tragen Sie hier Ihren Nachnamen ein.
+
+plugin_rest_usercreation_helpText_password=Bitte w\u00E4hlen Sie ein Passwort, dass aus mindestens 6 und maximal 30 Zeichen besteht. 
+plugin_rest_usercreation_helpText_password2=Wiederholen Sie zur Sicherheit die Eingabe Ihres Passwortes.
+
+plugin_rest_usercreation_helpText_email=Geben Sie bitte Ihre E-Mail-Adresse an. An diese Adresse senden wir den Best\u00E4tigungslink, mit dem Sie Ihre Registrierung best\u00E4tigen. Sie k\u00F6nnen sich dann auch mit dieser Adresse und Ihrem Passwort anmelden.
+plugin_rest_usercreation_helpTitle_privacy=Zustimmung zur Datenschutzerkl\u00E4rung
+plugin_rest_usercreation_helpText_privacy=Bitte best\u00E4tigen Sie auch unsere Datenschutzerkl\u00E4rung nach Kenntnisnahme.
+
+plugin_rest_usercreation_helpText_institutionName=Wir ben\u00F6tigen den Namen der Institution, f\u00FCr die Sie die Ablieferung durchf\u00FChren. Sollten Sie nicht f\u00FCr eine Institution abliefern, dann geben Sie einfach erneut Ihren Namen (Vorname Nachname) an.
+plugin_rest_usercreation_helpText_institutionShortName=Wir ben\u00F6tigen den Namen der Institution, f\u00FCr die Sie die Ablieferung durchf\u00FChren. Sollten Sie nicht f\u00FCr eine Institution abliefern, dann geben Sie einfach erneut Ihren Namen (Vorname Nachname) an.
