Change message key for heading in layout wizzard (page4); refs #23190

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -15,7 +15,7 @@ login_new_account_emailAddress2=E-Mail-Best\u00E4tigung
 
 login_new_contact=Kontaktperson
 login_new_activation=Daten\u00FCbersicht und Antrag auf Freischaltung
-login_new_additionalData=Weitere Informationen zur Ablieferung
+login_new_additionalData=Komforteinstellungen
 
 login_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 255 Zeichen sein.
 login_new_account_institutionNameHelp=Wenn Sie keinen Organisationsnamen haben, weil Sie ein privater Ablieferer sind, geben Sie Ihren Namen bitte erneut ein.
