--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -15,7 +15,7 @@ login_new_account_emailAddress2=E-Mail-Best\u00E4tigung
 
 login_new_contact=Kontaktperson
 login_new_activation=Daten\u00FCbersicht und Antrag auf Freischaltung
-login_new_additionalData=Komforteinstellungen
+login_new_additionalData=Weitere Informationen zur Ablieferung
 
 login_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 255 Zeichen sein.
 login_new_account_institutionNameHelp=Wenn Sie keinen Organisationsnamen haben, weil Sie ein privater Ablieferer sind, geben Sie Ihren Namen bitte erneut ein.
@@ -92,7 +92,7 @@ page4=Ablieferung
 page5=\u00DCbersicht
 
 login_new_account_confirmEmail=Sie haben sich erfolgreich registriert. Bitte wechseln Sie nun in Ihr E-Mail Postfach und best\u00E4tigen Sie ihre E-Mail Adresse </br></br> Danach werden Sie aufgefordert, Ihre Daten zu vervollst\u00E4ndigen.
-login_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden.
+login_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden. <br/> <a href="/Goobi/uii/external_index.xhtml">zur\u00FCck zum login</a>
 
 login_new_account_institutionShortNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 6 Zeichen sein. Es d\u00FCrfen nur Buchstaben und Zahlen verwendet werden.
 login_new_account_institutionShortNameInUse=Dieses K\u00FCrzel ist bereits in Benutzung, bitte w\u00E4len Sie ein anderes.
