show inline help for static fields

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -134,3 +134,6 @@ plugin_rest_usercreation_helpText_institutionName=Wir ben\u00F6tigen den Namen d
 plugin_rest_usercreation_helpText_institutionShortName=Wir ben\u00F6tigen den Namen der Institution, f\u00FCr die Sie die Ablieferung durchf\u00FChren. Sollten Sie nicht f\u00FCr eine Institution abliefern, dann geben Sie einfach erneut Ihren Namen (Vorname Nachname) an.
 
 anyField=Beliebiges Feld
+
+
+plugin_rest_usercreation_requiredField=Das Feld ist ein Pflichtfeld.
