Add msg key for account activation

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -70,6 +70,7 @@ login_new_account_activation=Hiermit beantrage ich die Freischaltung zur Abliefe
 login_new_account_activationNotSet=Die Checkbox zur Freischaltung wurde nicht aktiviert.
 login_new_account_privacyTextNotAcccepted=Die Datenschutzerkl\u00E4rung wurde noch nicht akzeptiert.
 login_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
+login_new_account_askForActivation=Antrag auf Freischaltung
 plugin_rest_usercreation_requiredFields=Mit <span class\="info-required__asterisk">*</span> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
