--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -116,4 +116,4 @@ process_grid_CatalogIDPeriodicalDB=ZDB ID
 process_grid_Abstract=Zusammenfassung
 process_grid_CorporateContributor=Sonstige K\u00F6rperschaft
 process_grid_SubjectTopic=Schlagwort
-process_grid_SeriesOrder
+plugin_administration_delivery_configurationFileNotWritable=Die Konfigurationsdatei ist nicht schreibbar, daher steht die Funktion zur Bearbeitung der Datenschutzerkl\u00E4rung nicht zur verf\u00FCgung.
