Add messages and remove quotation marks

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -50,10 +50,11 @@ plugin_dashboard_deliverContactPersonDataButton=Kontaktperson verwalten
 plugin_dashboard_deliverShowExistingDataHeader=Bisherige Datenlieferungen
 plugin_dashboard_deliverShowExistingData=Auflistung bisheriger Datenlieferungen
 plugin_dashboard_deliverShowExistingDataButton=Datenlieferungen verwalten
-plugin_dashboard_pageHelp="Hilfe zu dieser Seite anzeigen"
-plugin_dashboard_uploadFormHeader="Bitte laden Sie Ihre Dokumente hier hoch"
-plugin_dashboard_uploadFormMessage="Ziehen Sie Dokumente, Bilder oder Datens\u00E4tze auf dieses Feld"
-plugin_dashboard_or="ODER"
+plugin_dashboard_pageHelp=Hilfe zu dieser Seite anzeigen
+plugin_dashboard_uploadFormHeader=Bitte laden Sie Ihre Dokumente hier hoch
+plugin_dashboard_uploadFormMessage=Ziehen Sie Dokumente, Bilder oder Datens\u00E4tze auf dieses Feld
+plugin_dashboard_ariaLabel_uploadForm=Laden Sie hier Ihre Dokumente hoch
+plugin_dashboard_or=ODER
 displayMode_zdbTitleData=ZDB Titeldaten
 process_grid_DocLanguage=Sprache
 process_grid_PublicationRun=Nummerierung der Erstausgabe
