--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -1,18 +1,17 @@
-login_new_account_confirmPrivacyStatement=Ja, ich habe die <a data-bs-toggle="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
-intranda_administration_deliveryManagement=Verwaltung von Abliefernden
-displayMode_institution=Einrichtungen
-displayMode_user=Benutzer
-displayMode_privacyPolicy=Datenschutzerkl\u00E4rung
-login_new_institution=Daten über abliefernde Institution oder Person
-login_new_account_institutionName=Name der abliefernden Institution/Organisation oder Person
-login_new_account_password=Passwort
-login_new_account_password2=Passwortbest\u00E4tigung
-login_new_account_emailAddress2=E-Mail-Best\u00E4tigung
-login_new_contact=Kontaktperson
-login_new_activation=Daten\u00FCbersicht und Antrag auf Freischaltung
-login_new_additionalData=Weitere Informationen zur Ablieferung
-login_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 255 Zeichen sein.
-login_new_account_institutionNameHelp=Wenn Sie keinen Organisationsnamen haben, weil Sie ein privater Ablieferer sind, geben Sie Ihren Namen bitte erneut ein.
+plugin_rest_usercreation_new_account_confirmPrivacyStatement=Ja, ich habe die <a data-bs-toggle="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
+plugin_rest_usercreation_new_institution=Daten über abliefernde Institution oder Person
+plugin_rest_usercreation_new_account_institutionName=Name der abliefernden Institution/Organisation oder Person
+plugin_rest_usercreation_new_account_password=Passwort
+plugin_rest_usercreation_backToLogin=Zurück zum Login
+plugin_rest_usercreation_goToHelpPages=Zu den Hilfeseiten wechseln
+plugin_rest_usercreation_new_account_password2=Passwortbest\u00E4tigung
+plugin_rest_usercreation_new_contact=Kontaktperson
+plugin_rest_usercreation_new_activation=Daten\u00FCbersicht und Antrag auf Freischaltung
+plugin_rest_usercreation_new_additionalData=Weitere Informationen zur Ablieferung
+plugin_rest_usercreation_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 255 Zeichen sein.
+plugin_rest_usercreation_new_account_institutionNameHelp=Wenn Sie keinen Organisationsnamen haben, weil Sie ein privater Ablieferer sind, geben Sie Ihren Namen bitte erneut ein.
+
+
 plugin_dashboard_deliveryWellcomeMessage=Hallo {0}, Sie haben folgende Auswahlm\u00F6glichkeiten:
 plugin_dashboard_deliverJournalsHeader=Periodische Publikation hochladen
 plugin_dashboard_deliverJournals=Zeitschriften, Newsletter, alles was regelm\u00E4ssig erscheint
@@ -23,12 +22,14 @@ plugin_dashboard_deliverMonographButton=Monografie hochladen
 plugin_dashboard_deliverHelpHeader=E-Pflicht-Hilfe
 plugin_dashboard_deliverHelp=Lernen Sie das E-Pflicht System der ZLB kennen, bevor Sie Publikationen hochladen
 plugin_dashboard_deliverHelpButton=Hilfethemen ansehen
+
 plugin_dashboard_delivery_upload=Upload
 plugin_dashboard_delivery_data1=Daten eingeben I
 plugin_dashboard_delivery_data2=Daten eingeben II
 plugin_dashboard_delivery_data3=Daten eingeben III
 plugin_dashboard_delivery_overview=\u00DCbersicht
 plugin_dashboard_delivery_finish=Ende
+
 plugin_dashboard_deliverShowDataHeader=Eigene Daten bearbeiten
 plugin_dashboard_deliverShowData=Hier können die erfassten Nutzerdaten eingesehen und bearbeitet werden.
 plugin_dashboard_deliverShowDataButton=Daten bearbeiten
@@ -54,45 +55,47 @@ plugin_dashboard_pageHelp=Hilfe zu dieser Seite anzeigen
 plugin_dashboard_uploadFormHeader=Bitte laden Sie Ihre Dokumente hier hoch
 plugin_dashboard_uploadFormMessage=Ziehen Sie Dokumente, Bilder oder Datens\u00E4tze auf dieses Feld
 plugin_dashboard_ariaLabel_uploadForm=Laden Sie hier Ihre Dokumente hoch
+plugin_dashboard_uploadFormLabel=W\u00E4hlen Sie eine Datei aus
 plugin_dashboard_or=ODER
 displayMode_zdbTitleData=ZDB Titeldaten
 process_grid_DocLanguage=Sprache
 process_grid_PublicationRun=Nummerierung der Erstausgabe
 process_grid_PublicationStart=Erscheinungsdatum der ersten Ausgabe
-login_new_account_resetPassword=Passwort zur\u00FCcksetzen
+plugin_rest_usercreation_new_account_resetPassword=Passwort zur\u00FCcksetzen
 page1=Account
 page2=Einrichtung
 page3=Ansprechpartner
 page4=Ablieferung
 page5=\u00DCbersicht
-login_new_account_confirmEmail=Sie haben sich erfolgreich registriert. Bitte wechseln Sie nun in Ihr E-Mail Postfach und best\u00E4tigen Sie ihre E-Mail Adresse </br></br> Danach werden Sie aufgefordert, Ihre Daten zu vervollst\u00E4ndigen.
-login_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden. <br/> <a href="/Goobi/uii/external_index.xhtml">zur\u00FCck zum login</a>
-login_new_account_institutionShortNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 6 Zeichen sein. Es d\u00FCrfen nur Buchstaben und Zahlen verwendet werden.
-login_new_account_institutionShortNameInUse=Dieses K\u00FCrzel ist bereits in Benutzung, bitte w\u00E4len Sie ein anderes.
-login_new_account_institutionShortName=K\u00FCrzel
-login_new_account_userIsContactPerson=Ich bin die Kontaktperson f\u00FCr meine Organisation (Daten werden automatisch \u00FCbernommen)
-login_new_account_activation=Hiermit beantrage ich die Freischaltung zur Ablieferung digitaler Pflichtpublikationen
-login_new_account_activationNotSet=Die Checkbox zur Freischaltung wurde nicht aktiviert.
-login_new_account_privacyTextNotAcccepted=Die Datenschutzerkl\u00E4rung wurde noch nicht akzeptiert.
-login_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
-login_new_account_askForActivation=Antrag auf Freischaltung
-plugin_rest_usercreation_requiredFields=Mit <span class\="info-required__asterisk">*</span> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
+plugin_rest_usercreation_new_account_confirmEmail=Sie haben sich erfolgreich registriert. Bitte wechseln Sie nun in Ihr E-Mail Postfach und best\u00E4tigen Sie ihre E-Mail Adresse </br></br> Danach werden Sie aufgefordert, Ihre Daten zu vervollst\u00E4ndigen.
+plugin_rest_usercreation_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden. <br/> <a href="/Goobi/uii/external_index.xhtml">zur\u00FCck zum login</a>
+plugin_rest_usercreation_new_account_institutionShortNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 6 Zeichen sein. Es d\u00FCrfen nur Buchstaben und Zahlen verwendet werden.
+plugin_rest_usercreation_new_account_institutionShortNameInUse=Dieses K\u00FCrzel ist bereits in Benutzung, bitte w\u00E4len Sie ein anderes.
+plugin_rest_usercreation_new_account_institutionShortName=K\u00FCrzel
+plugin_rest_usercreation_new_account_userIsContactPerson=Ich bin die Kontaktperson f\u00FCr meine Organisation (Daten werden automatisch \u00FCbernommen)
+plugin_rest_usercreation_new_account_activation=Hiermit beantrage ich die Freischaltung zur Ablieferung digitaler Pflichtpublikationen
+plugin_rest_usercreation_new_account_activationNotSet=Die Checkbox zur Freischaltung wurde nicht aktiviert.
+plugin_rest_usercreation_new_account_privacyTextNotAcccepted=Die Datenschutzerkl\u00E4rung wurde noch nicht akzeptiert.
+plugin_rest_usercreation_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
+plugin_rest_usercreation_new_account_askForActivation=Antrag auf Freischaltung
+plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-required__asterisk"></i> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
-plugin_rest_usercreation_requiredFields=Mit <span class\="info-required__asterisk">*</span> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
+plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-required__asterisk"></i> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_ariaLabel_elementHelp=Hilfe zu diesem Element anzeigen
 plugin_rest_usercreation_ariaLabel_helpModal=In diesem Modal werden Hilfetexte angezeigt
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
 plugin_rest_usercreation_helpText_firstname=Bitte tragen Sie Ihren Vornamen ein.
 plugin_rest_usercreation_helpText_lastname=Wie d\u00FCrfen wir Sie ansprechen? Bitte tragen Sie hier Ihren Nachnamen ein.
-plugin_rest_usercreation_helpText_password=Bitte w\u00E4hlen Sie ein Passwort, dass aus mindestens 6 und maximal 30 Zeichen besteht. 
+plugin_rest_usercreation_helpText_password=Bitte w\u00E4hlen Sie ein Passwort, dass aus mindestens 6 und maximal 30 Zeichen besteht.
 plugin_rest_usercreation_helpText_password2=Wiederholen Sie zur Sicherheit die Eingabe Ihres Passwortes.
 plugin_rest_usercreation_helpText_email=Geben Sie bitte Ihre E-Mail-Adresse an. An diese Adresse senden wir den Best\u00E4tigungslink, mit dem Sie Ihre Registrierung best\u00E4tigen. Sie k\u00F6nnen sich dann auch mit dieser Adresse und Ihrem Passwort anmelden.
 plugin_rest_usercreation_helpTitle_privacy=Zustimmung zur Datenschutzerkl\u00E4rung
 plugin_rest_usercreation_helpText_privacy=Bitte best\u00E4tigen Sie auch unsere Datenschutzerkl\u00E4rung nach Kenntnisnahme.
 plugin_rest_usercreation_helpText_institutionName=Wir ben\u00F6tigen den Namen der Institution, f\u00FCr die Sie die Ablieferung durchf\u00FChren. Sollten Sie nicht f\u00FCr eine Institution abliefern, dann geben Sie einfach erneut Ihren Namen (Vorname Nachname) an.
 plugin_rest_usercreation_helpText_institutionShortName=Wir ben\u00F6tigen den Namen der Institution, f\u00FCr die Sie die Ablieferung durchf\u00FChren. Sollten Sie nicht f\u00FCr eine Institution abliefern, dann geben Sie einfach erneut Ihren Namen (Vorname Nachname) an.
+plugin_rest_usercreation_ariaLabel_elementDuplicate=F\u00FCgen Sie ein weiteres Formelement vom gleichen Typ hinzu
 anyField=Beliebiges Feld
 includeFinishedZdbData=Registrierte ZDB Titeldaten anzeigen
 plugin_rest_usercreation_requiredField=Das Feld ist ein Pflichtfeld.
@@ -122,3 +125,12 @@ process_grid_Abstract=Zusammenfassung
 process_grid_CorporateContributor=Sonstige K\u00F6rperschaft
 process_grid_SubjectTopic=Schlagwort
 plugin_administration_delivery_configurationFileNotWritable=Die Konfigurationsdatei ist nicht schreibbar, daher steht die Funktion zur Bearbeitung der Datenschutzerkl\u00E4rung nicht zur verf\u00FCgung.
+
+
+
+
+intranda_administration_deliveryManagement=Verwaltung von Abliefernden
+
+displayMode_institution=Einrichtungen
+displayMode_user=Benutzer
+displayMode_privacyPolicy=Datenschutzerkl\u00E4rung
