Fix broken message key

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -104,8 +104,7 @@ plugin_rest_usercreation_new_account_activationNotSet=Die Checkbox zur Freischal
 plugin_rest_usercreation_new_account_askForActivation=Antrag auf Freischaltung
 plugin_rest_usercreation_new_account_confirmEmail=Sie haben sich erfolgreich registriert. Bitte wechseln Sie nun in Ihr E-Mail Postfach und best\u00E4tigen Sie ihre E-Mail Adresse </br></br> Danach werden Sie aufgefordert, Ihre Daten zu vervollst\u00E4ndigen.
 plugin_rest_usercreation_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
-plugin_rest_usercreation_new_account_confirmPrivacyStatement="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
-plugin_rest_usercreation_new_account_confirmPrivacyStatement=Ja, ich habe die <a data-bs-t
+plugin_rest_usercreation_new_account_confirmPrivacyStatement=Ja, ich habe die <a data-bs-toggle="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
 plugin_rest_usercreation_new_account_createAccount=Account erstellen
 plugin_rest_usercreation_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden. <br/> <a href="/Goobi/uii/external_index.xhtml">zur\u00FCck zum login</a>
 plugin_rest_usercreation_new_account_emailAddress=E-Mail
