Add FB Link via message key

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -129,10 +129,10 @@ plugin_rest_usercreation_next=weiter
 plugin_rest_usercreation_page1=Account
 plugin_rest_usercreation_page2=Einrichtung
 plugin_rest_usercreation_page3=Ansprechpartner
-plugin_rest_usercreation_page4=Ablieferung
 plugin_rest_usercreation_page5=\u00DCbersicht
 plugin_rest_usercreation_password=Passwort
 plugin_rest_usercreation_requiredField=Das Feld ist ein Pflichtfeld.
 plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-required__asterisk"></i> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
 plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-required__asterisk"></i> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
 plugin_rest_usercreation_userName=Benutzername
+plugin_rest_usercreation_fbLink=https://www.facebook.com/zentralundlandesbibliothekberlin
