Change message key

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -98,7 +98,7 @@ plugin_rest_usercreation_helpText_privacy=Bitte best\u00E4tigen Sie auch unsere 
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
 plugin_rest_usercreation_helpTitle_privacy=Zustimmung zur Datenschutzerkl\u00E4rung
-plugin_rest_usercreation_new_account=E-Mail Adresse best\u00E4tigen
+plugin_rest_usercreation_new_account=Registrierung
 plugin_rest_usercreation_new_account_activation=Hiermit beantrage ich die Freischaltung zur Ablieferung digitaler Pflichtpublikationen
 plugin_rest_usercreation_new_account_activationNotSet=Die Checkbox zur Freischaltung wurde nicht aktiviert.
 plugin_rest_usercreation_new_account_askForActivation=Antrag auf Freischaltung
