--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -83,7 +83,7 @@ plugin_rest_usercreation_ariaLabel_elementHelp=Hilfe zu diesem Element anzeigen
 plugin_rest_usercreation_ariaLabel_helpModal=In diesem Modal werden Hilfetexte angezeigt
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
-plugin_rest_usercreation_back=zur\u00FCck
+plugin_rest_usercreation_back=Zur\u00FCck
 plugin_rest_usercreation_backToLogin=Zurück zum Login
 plugin_rest_usercreation_createInstitution=Institution hinzuf\u00FCgen
 plugin_rest_usercreation_goToHelpPages=Zu den Hilfeseiten wechseln
@@ -106,8 +106,9 @@ plugin_rest_usercreation_new_account_confirmEmail=Sie haben sich erfolgreich reg
 plugin_rest_usercreation_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
 plugin_rest_usercreation_new_account_confirmPrivacyStatement=Ja, ich habe die <a data-bs-toggle="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
 plugin_rest_usercreation_new_account_createAccount=Account erstellen
-plugin_rest_usercreation_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden. <br/> <a href="/Goobi/uii/external_index.xhtml">zur\u00FCck zum login</a>
+plugin_rest_usercreation_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden.
 plugin_rest_usercreation_new_account_emailAddress=E-Mail
+plugin_rest_usercreation_new_account_creationSuccessfulHeading=Account erfolgreich angelegt
 plugin_rest_usercreation_new_account_institutionName=Name der abliefernden Institution/Organisation oder Person
 plugin_rest_usercreation_new_account_institutionNameHelp=Wenn Sie keinen Organisationsnamen haben, weil Sie ein privater Ablieferer sind, geben Sie Ihren Namen bitte erneut ein.
 plugin_rest_usercreation_new_account_institutionNameInvalid=Das Feld ist ein Pflichtfeld und darf nicht l\u00E4nger als 255 Zeichen sein.
@@ -125,7 +126,7 @@ plugin_rest_usercreation_new_additionalData=Weitere Informationen zur Ablieferun
 plugin_rest_usercreation_new_contact=Kontaktperson
 plugin_rest_usercreation_new_createNewContact=Eine weitere Person hinzuf\u00FCgen
 plugin_rest_usercreation_new_institution=Daten über abliefernde Institution oder Person
-plugin_rest_usercreation_next=weiter
+plugin_rest_usercreation_next=Weiter
 plugin_rest_usercreation_page1=Account
 plugin_rest_usercreation_page2=Einrichtung
 plugin_rest_usercreation_page3=Ansprechpartner
