Fix missing help messages

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -137,3 +137,4 @@ plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-requir
 plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-required__asterisk"></i> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
 plugin_rest_usercreation_userName=Benutzername
 plugin_rest_usercreation_fbLink=https://www.facebook.com/zentralundlandesbibliothekberlin
+plugin_rest_usercreation_new_account_activation_helpMessage=Beantragen Sie Ihre Freischaltung.
