--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -174,5 +174,5 @@ plugin_rest_usercreation_new_account_confirm_helpBody1=Text oberhalb des Bildes.
 plugin_rest_usercreation_new_account_confirm_helpImg=<img src="https://via.placeholder.com/400/200" class="modal__img"/>
 plugin_rest_usercreation_new_account_confirm_helpBody2=Text unterhalb des Bildes
 
-
+plugin_dashboard_delivery_noFileUploaded=Um fortzufahren, muss mindestens ein Dokument hochgeladen werden.
 
