Overview: display additional data as disabled checkboxes

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -138,6 +138,8 @@ plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-requir
 plugin_rest_usercreation_userName=Benutzername
 plugin_rest_usercreation_fbLink=https://www.facebook.com/zentralundlandesbibliothekberlin
 plugin_rest_usercreation_new_account_activation_helpMessage=Beantragen Sie Ihre Freischaltung.
+plugin_rest_usercreation_new_account_overview_uncheckedCheck_ariaLabel=Unmarkiertes Kontrollk\u00E4stchen
+plugin_rest_usercreation_new_account_overview_checkedCheck_ariaLabel=Markiertes Kontrollk\u00E4stchen
 
 plugin_rest_usercreation_new_account_page1_helpHeader=Hilfe zur Registrierung
 plugin_rest_usercreation_new_account_page1_helpBody1=Text oberhalb des Bildes.
