--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -5,33 +5,33 @@ plugin_administration_deliveryManagement_displayMode_privacyPolicy=Datenschutzer
 plugin_administration_deliveryManagement_displayMode_user=Benutzer
 plugin_administration_deliveryManagement_displayMode_zdbTitleData=ZDB Titeldaten
 plugin_administration_deliveryManagement_includeFinishedZdbData=Registrierte ZDB Titeldaten anzeigen
-plugin_administration_deliveryManagement_process_grid_Abstract=Zusammenfassung
-plugin_administration_deliveryManagement_process_grid_AccessLicense=Zugriffsberechtigung
-plugin_administration_deliveryManagement_process_grid_ActionNote=Maﬂname
-plugin_administration_deliveryManagement_process_grid_CatalogIDPeriodicalDB=ZDB ID
-plugin_administration_deliveryManagement_process_grid_ContentType=Inhaltstyp
-plugin_administration_deliveryManagement_process_grid_Copyright=Copyright
-plugin_administration_deliveryManagement_process_grid_CorporateContributor=Sonstige K\u00F6rperschaft
-plugin_administration_deliveryManagement_process_grid_DDC=DDC
-plugin_administration_deliveryManagement_process_grid_DOI=DOI
-plugin_administration_deliveryManagement_process_grid_DataMediumType=Datentr‰gertyp
-plugin_administration_deliveryManagement_process_grid_DigitalOrigin=Vorlageinformation
-plugin_administration_deliveryManagement_process_grid_DocLanguage=Sprache
-plugin_administration_deliveryManagement_process_grid_ISIL=Bibliothek (ISIL)
-plugin_administration_deliveryManagement_process_grid_InternalNote=Interne Anmerkung
-plugin_administration_deliveryManagement_process_grid_LegalBasis=Kontext/Rechtsgrundlage
-plugin_administration_deliveryManagement_process_grid_MediaType=Medientyp
-plugin_administration_deliveryManagement_process_grid_ModsGenre=Gattung
-plugin_administration_deliveryManagement_process_grid_NoteStatementOfResponsibility=Verfasserangabe
-plugin_administration_deliveryManagement_process_grid_OtherCorporate=Sonstige K\u00F6rperschaft
-plugin_administration_deliveryManagement_process_grid_PublicationRun=Nummerierung der Erstausgabe
-plugin_administration_deliveryManagement_process_grid_PublicationStart=Erscheinungsdatum der ersten Ausgabe
-plugin_administration_deliveryManagement_process_grid_PublisherCorporate=Herausgeber
-plugin_administration_deliveryManagement_process_grid_SubjectTopic=Schlagwort
-plugin_administration_deliveryManagement_process_grid_TitleDocSub1=Zusatz zum Haupttitel
-plugin_administration_deliveryManagement_process_grid_TypeOfResource=Ressourcentyp
-plugin_administration_deliveryManagement_process_grid_URL=Adresse der Originalver\u00F6ffentlichung
-plugin_administration_deliveryManagement_process_grid_URN=URN
+process_grid_Abstract=Zusammenfassung
+process_grid_AccessLicense=Zugriffsberechtigung
+process_grid_ActionNote=Maﬂname
+process_grid_CatalogIDPeriodicalDB=ZDB ID
+process_grid_ContentType=Inhaltstyp
+process_grid_Copyright=Copyright
+process_grid_CorporateContributor=Sonstige K\u00F6rperschaft
+process_grid_DDC=DDC
+process_grid_DOI=DOI
+process_grid_DataMediumType=Datentr‰gertyp
+process_grid_DigitalOrigin=Vorlageinformation
+process_grid_DocLanguage=Sprache
+process_grid_ISIL=Bibliothek (ISIL)
+process_grid_InternalNote=Interne Anmerkung
+process_grid_LegalBasis=Kontext/Rechtsgrundlage
+process_grid_MediaType=Medientyp
+process_grid_ModsGenre=Gattung
+process_grid_NoteStatementOfResponsibility=Verfasserangabe
+process_grid_OtherCorporate=Sonstige K\u00F6rperschaft
+process_grid_PublicationRun=Nummerierung der Erstausgabe
+process_grid_PublicationStart=Erscheinungsdatum der ersten Ausgabe
+process_grid_PublisherCorporate=Herausgeber
+process_grid_SubjectTopic=Schlagwort
+process_grid_TitleDocSub1=Zusatz zum Haupttitel
+process_grid_TypeOfResource=Ressourcentyp
+process_grid_URL=Adresse der Originalver\u00F6ffentlichung
+process_grid_URN=URN
 plugin_administration_deliveryManagement_showOnlyInactiveUser=Nur unregistrierte Nutzer anzeigen
 plugin_administration_delivery_configurationFileNotWritable=Die Konfigurationsdatei ist nicht schreibbar, daher steht die Funktion zur Bearbeitung der Datenschutzerkl\u00E4rung nicht zur verf\u00FCgung.
 plugin_dashboard_delivery_anyField=Beliebiges Feld
