changed second contact person

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -125,6 +125,7 @@ plugin_rest_usercreation_new_activation=Daten\u00FCbersicht und Antrag auf Freis
 plugin_rest_usercreation_new_additionalData=Weitere Informationen zur Ablieferung
 plugin_rest_usercreation_new_contact=Kontaktperson
 plugin_rest_usercreation_new_createNewContact=Eine weitere Person hinzuf\u00FCgen
+plugin_rest_usercreation_new_disableContact=Kontaktperson entfernen
 plugin_rest_usercreation_new_institution=Daten über abliefernde Institution oder Person
 plugin_rest_usercreation_next=Weiter
 plugin_rest_usercreation_page1=Account
@@ -177,3 +178,4 @@ plugin_rest_usercreation_new_account_confirm_helpImg=<img src="https://via.place
 plugin_rest_usercreation_new_account_confirm_helpBody2=Text unterhalb des Bildes
 
 plugin_dashboard_delivery_noFileUploaded=Um fortzufahren, muss mindestens ein Dokument hochgeladen werden.
+
