--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -66,8 +66,8 @@ plugin_dashboard_delivery_deliverShowDataHeader=Eigene Daten bearbeiten
 plugin_dashboard_delivery_deliverShowExistingData=Auflistung bisheriger Datenlieferungen
 plugin_dashboard_delivery_deliverShowExistingDataButton=Datenlieferungen verwalten
 plugin_dashboard_delivery_deliverShowExistingDataHeader=Bisherige Datenlieferungen
-plugin_dashboard_delivery_deliverUserData=Account verwalten
-plugin_dashboard_delivery_deliverUserDataButton=Account verwalten
+plugin_dashboard_delivery_deliverUserData=Eigene Daten bearbeiten
+plugin_dashboard_delivery_deliverUserDataButton=Eigene Daten bearbeiten
 plugin_dashboard_delivery_deliverUserDataTitle=Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 plugin_dashboard_delivery_finish=Ende
 plugin_dashboard_delivery_or=ODER
