PW Reset form: change heading + label, add info text

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -179,3 +179,8 @@ plugin_rest_usercreation_new_account_confirm_helpBody2=Text unterhalb des Bildes
 
 plugin_dashboard_delivery_noFileUploaded=Um fortzufahren, muss mindestens ein Dokument hochgeladen werden.
 
+plugin_rest_usercreation_login_heading=Login
+plugin_rest_usercreation_pwReset_heading=Passwort zur\u00FCcksetzen
+plugin_rest_usercreation_pwReset_label=Nutzername oder E-Mail-Adresse
+plugin_rest_usercreation_pwReset_message=Nach Absenden des Formulars wird ein neues Passwort an die von Ihnen hinterlegte E-Mail-Adresse gesendet.
+
