Fix http error: remove placeholders from external url

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -144,37 +144,37 @@ plugin_rest_usercreation_new_account_overview_checkedCheck_ariaLabel=Markiertes 
 
 plugin_rest_usercreation_new_account_page1_helpHeader=Hilfe zur Registrierung
 plugin_rest_usercreation_new_account_page1_helpBody1=Text oberhalb des Bildes.
-plugin_rest_usercreation_new_account_page1_helpImg=<img src="https://via.placeholder.com/400x200" class="modal__img"/>
+plugin_rest_usercreation_new_account_page1_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 plugin_rest_usercreation_new_account_page1_helpBody2=Text unterhalb des Bildes
 
 plugin_rest_usercreation_new_account_page2_helpHeader=Hilfe zu "Daten der abliefernden Institution oder Person"
 plugin_rest_usercreation_new_account_page2_helpBody1=Text oberhalb des Bildes.
-plugin_rest_usercreation_new_account_page2_helpImg=<img src="https://via.placeholder.com/400x200" class="modal__img"/>
+plugin_rest_usercreation_new_account_page2_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 plugin_rest_usercreation_new_account_page2_helpBody2=Text unterhalb des Bildes
 
 plugin_rest_usercreation_new_account_page3_helpHeader=Hilfe zur Kontaktperson
 plugin_rest_usercreation_new_account_page3_helpBody1=Text oberhalb des Bildes.
-plugin_rest_usercreation_new_account_page3_helpImg=<img src="https://via.placeholder.com/400x200" class="modal__img"/>
+plugin_rest_usercreation_new_account_page3_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 plugin_rest_usercreation_new_account_page3_helpBody2=Text unterhalb des Bildes
 
 plugin_rest_usercreation_new_account_page4_helpHeader=Hilfe zur "Weitere Informationen"
 plugin_rest_usercreation_new_account_page4_helpBody1=Text oberhalb des Bildes.
-plugin_rest_usercreation_new_account_page4_helpImg=<img src="https://via.placeholder.com/400x200" class="modal__img"/>
+plugin_rest_usercreation_new_account_page4_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 plugin_rest_usercreation_new_account_page4_helpBody2=Text unterhalb des Bildes
 
 plugin_rest_usercreation_new_account_page5_helpHeader=Hilfe zu "Antrag auf Freischaltung"
 plugin_rest_usercreation_new_account_page5_helpBody1=Text oberhalb des Bildes.
-plugin_rest_usercreation_new_account_page5_helpImg=<img src="https://via.placeholder.com/400x200" class="modal__img"/>
+plugin_rest_usercreation_new_account_page5_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 plugin_rest_usercreation_new_account_page5_helpBody2=Text unterhalb des Bildes
 
 plugin_rest_usercreation_new_account_wait_helpHeader=Hilfe zur Registrierung
 plugin_rest_usercreation_new_account_wait_helpBody1=Text oberhalb des Bildes.
-plugin_rest_usercreation_new_account_wait_helpImg=<img src="https://via.placeholder.com/400x200" class="modal__img"/>
+plugin_rest_usercreation_new_account_wait_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 plugin_rest_usercreation_new_account_wait_helpBody2=Text unterhalb des Bildes
 
 plugin_rest_usercreation_new_account_confirm_helpHeader=Hilfe zur erfolgreichen Registrierung
 plugin_rest_usercreation_new_account_confirm_helpBody1=Text oberhalb des Bildes.
-plugin_rest_usercreation_new_account_confirm_helpImg=<img src="https://via.placeholder.com/400/200" class="modal__img"/>
+plugin_rest_usercreation_new_account_confirm_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 plugin_rest_usercreation_new_account_confirm_helpBody2=Text unterhalb des Bildes
 
 plugin_dashboard_delivery_noFileUploaded=Um fortzufahren, muss mindestens ein Dokument hochgeladen werden.
