Add new and change existing message keys

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -98,13 +98,13 @@ plugin_rest_usercreation_helpText_privacy=Bitte best\u00E4tigen Sie auch unsere 
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
 plugin_rest_usercreation_helpText_userName=Ihr Anmeldename muss zwischen 2 und 64 Zeichen lang sein und darf nur Kleinbuchstaben (a-z), Unterstriche und Ziffern (0-9) enthalten, z.B.: institution_epflicht
 plugin_rest_usercreation_helpTitle_privacy=Zustimmung zur Datenschutzerkl\u00E4rung
-plugin_rest_usercreation_new_account=Registrierung
+plugin_rest_usercreation_new_account=Account erstellen
 plugin_rest_usercreation_new_account_activation=Hiermit beantrage ich die Freischaltung zur Ablieferung digitaler Pflichtpublikationen
 plugin_rest_usercreation_new_account_activationNotSet=Die Checkbox zur Freischaltung wurde nicht aktiviert.
 plugin_rest_usercreation_new_account_askForActivation=Antrag auf Freischaltung
 plugin_rest_usercreation_new_account_confirmEmail=Sie haben sich erfolgreich registriert. Bitte wechseln Sie nun in Ihr E-Mail Postfach und best\u00E4tigen Sie ihre E-Mail Adresse </br></br> Danach werden Sie aufgefordert, Ihre Daten zu vervollst\u00E4ndigen.
 plugin_rest_usercreation_new_account_confirmPasswordWrong=Die Passw\u00F6rter stimmen nicht überein.
-plugin_rest_usercreation_new_account_confirmPrivacyStatement=Ja, ich habe die <a data-bs-toggle="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
+plugin_rest_usercreation_new_account_confirmPrivacyStatement=Ich habe die <a data-bs-toggle="modal" data-bs-target="#privacyModal" class="btn-primary">Datenschutzerkl\u00E4rung</a> gelesen und akzeptiere diese.
 plugin_rest_usercreation_new_account_createAccount=Account erstellen
 plugin_rest_usercreation_new_account_creationSuccessful=Der Account wurde erfolgreich angelegt. Die ZLB wird die Angaben \u00FCberpr\u00FCfen und ihn dann freischalten. Dar\u00FCber wird per Mail informiert. Anschliessend kann der Account verwendet werden.
 plugin_rest_usercreation_new_account_emailAddress=E-Mail
