Normalize status bar items + headings

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -85,7 +85,7 @@ plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_back=Zur\u00FCck
 plugin_rest_usercreation_backToLogin=Zurück zum Login
-plugin_rest_usercreation_createInstitution=Institution hinzuf\u00FCgen
+plugin_rest_usercreation_createInstitution=Absenden
 plugin_rest_usercreation_goToHelpPages=Zu den Hilfeseiten wechseln
 plugin_rest_usercreation_helpText_email=Geben Sie bitte Ihre E-Mail-Adresse an. An diese Adresse senden wir den Best\u00E4tigungslink, mit dem Sie Ihre Registrierung best\u00E4tigen. Sie k\u00F6nnen sich dann auch mit dieser Adresse und Ihrem Passwort anmelden.
 plugin_rest_usercreation_helpText_firstname=Bitte tragen Sie Ihren Vornamen ein.
@@ -121,18 +121,18 @@ plugin_rest_usercreation_new_account_privacyTextNotAcccepted=Die Datenschutzerkl
 plugin_rest_usercreation_new_account_resetPassword=Passwort zur\u00FCcksetzen
 plugin_rest_usercreation_new_account_userIsContactPerson=Ich bin die Kontaktperson f\u00FCr meine Organisation (Daten werden automatisch \u00FCbernommen)
 plugin_rest_usercreation_new_account_userName=Benutzername
-plugin_rest_usercreation_new_activation=Daten\u00FCbersicht und Antrag auf Freischaltung
-plugin_rest_usercreation_new_additionalData=Weitere Informationen zur Ablieferung
+plugin_rest_usercreation_new_activation=\u00DCbersicht und Antrag auf Freischaltung
+plugin_rest_usercreation_new_additionalData=Weitere Informationen
 plugin_rest_usercreation_new_contact=Kontaktperson
 plugin_rest_usercreation_new_createNewContact=Eine weitere Person hinzuf\u00FCgen
 plugin_rest_usercreation_new_disableContact=Kontaktperson entfernen
-plugin_rest_usercreation_new_institution=Daten über abliefernde Institution oder Person
+plugin_rest_usercreation_new_institution=Daten zur Institution oder Person
 plugin_rest_usercreation_next=Weiter
 plugin_rest_usercreation_page1=Account
-plugin_rest_usercreation_page2=Einrichtung
-plugin_rest_usercreation_page3=Ansprechpartner
+plugin_rest_usercreation_page2=Daten zur Institution oder Person
+plugin_rest_usercreation_page3=Kontaktperson
 plugin_rest_usercreation_page4=Weitere Informationen
-plugin_rest_usercreation_page5=\u00DCbersicht
+plugin_rest_usercreation_page5=\u00DCbersicht und Antrag auf Freischaltung
 plugin_rest_usercreation_password=Passwort
 plugin_rest_usercreation_requiredField=Das Feld ist ein Pflichtfeld.
 plugin_rest_usercreation_requiredFields=Mit <i class="fa fa-asterisk info-required__asterisk"></i> gekennzeichnte Felder m\u00FCssen ausgef\u00FCllt werden.
