--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -261,3 +261,6 @@ plugin_dashboard_delivery_existingData_contact_helpBody1=Hilfetext \u00DCber dem
 plugin_dashboard_delivery_existingData_helpBody2=Hilfetext unter dem Bild
 plugin_dashboard_delivery_existingData_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
 
+intranda_workflow_processinspection=Pr\u00FCf-Ansicht
+plugin_workflow_processinspection_image=Erste Seite
+plugin_workflow_processinspection_fulltext=Textanfang
