Add filetype hint to msg key

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -1,7 +1,7 @@
 intranda_administration_deliveryManagement=Verwaltung von Abliefernden
 
 plugin_administration_deliveryManagement_uploadFile=XML-Datei hochladen
-plugin_administration_deliveryManagement_uploadInstitutionData=Stammdaten importieren
+plugin_administration_deliveryManagement_uploadInstitutionData=Stammdaten importieren (XML)
 plugin_administration_deliveryManagement_downloadInstitutionData=Stammdaten exportieren
 plugin_administration_deliveryManagement_displayMode_institution=Einrichtungen
 plugin_administration_deliveryManagement_displayMode_privacyPolicy=Datenschutzerkl\u00E4rung
@@ -268,3 +268,4 @@ plugin_dashboard_delivery_template_title=E-Pflicht
 intranda_workflow_processinspection=Pr\u00FCf-Ansicht
 plugin_workflow_processinspection_image=Erste Seite
 plugin_workflow_processinspection_fulltext=Textanfang
+
