--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -1,4 +1,5 @@
 intranda_administration_deliveryManagement=Verwaltung von Abliefernden
+plugin_administration_deliveryManagement_displayImports=Letzte Lieferungen
 plugin_administration_deliveryManagement_lastChangeDate=Datum der letzten Lieferung
 plugin_administration_deliveryManagement_uploadFile=XML-Datei hochladen
 plugin_administration_deliveryManagement_uploadInstitutionData=Stammdaten importieren (XML)
