--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -2,7 +2,7 @@ intranda_administration_deliveryManagement=Verwaltung von Abliefernden
 plugin_administration_deliveryManagement_displayImports=Letzte Lieferungen
 plugin_administration_deliveryManagement_lastChangeDate=Datum der letzten Lieferung
 plugin_administration_deliveryManagement_uploadFile=XML-Datei hochladen
-plugin_administration_deliveryManagement_uploadInstitutionData=Stammdaten importieren (XML)
+plugin_administration_deliveryManagement_uploadInstitutionData=Stammdaten importieren
 plugin_administration_deliveryManagement_downloadInstitutionData=Stammdaten exportieren
 plugin_administration_deliveryManagement_displayMode_institution=Einrichtungen
 plugin_administration_deliveryManagement_displayMode_privacyPolicy=Datenschutzerkl\u00E4rung
@@ -16,7 +16,7 @@ process_grid_CatalogIDPeriodicalDB=ZDB ID
 process_grid_ContentType=Inhaltstyp
 process_grid_Copyright=Copyright
 process_grid_CorporateContributor=Sonstige K\u00F6rperschaft
-process_grid_DDC=DDC
+process_grid_DDC=Sachgruppe
 process_grid_DOI=DOI
 process_grid_DataMediumType=Datenträgertyp
 process_grid_DigitalOrigin=Vorlageinformation
@@ -36,6 +36,16 @@ process_grid_TitleDocSub1=Zusatz zum Haupttitel
 process_grid_TypeOfResource=Ressourcentyp
 process_grid_URL=Adresse der Originalver\u00F6ffentlichung
 process_grid_URN=URN
+process_grid_Edition=Auflage\, Stand oder Version
+process_grid_FSK=Angabe zur freiwilligen Selbstkontrolle
+process_grid_ISSN=ISSN 	
+process_grid_ISBN=ISBN
+process_grid_ISMN=ISMN 	
+process_grid_UPC=UPC
+process_grid_EAN=GTIN/EAN
+process_grid_OrderNumber=Best.-Nr.
+process_grid_Handle=Handle
+process_grid_Identifikation=Eindeutige Identifikation
 plugin_administration_deliveryManagement_showOnlyInactiveUser=Nur unregistrierte Nutzer anzeigen
 plugin_administration_delivery_configurationFileNotWritable=Die Konfigurationsdatei ist nicht schreibbar, daher steht die Funktion zur Bearbeitung der Datenschutzerkl\u00E4rung nicht zur verf\u00FCgung.
 plugin_dashboard_delivery_anyField=Beliebiges Feld
@@ -264,9 +274,7 @@ plugin_dashboard_delivery_existingData_helpHeader=Hilfe zu "Bisherige Datenliefe
 plugin_dashboard_delivery_existingData_contact_helpBody1=Hilfetext \u00DCber dem Bild
 plugin_dashboard_delivery_existingData_helpBody2=Hilfetext unter dem Bild
 plugin_dashboard_delivery_existingData_helpImg=<img src="template/assets/img/Placeholder.svg" alt="" class="modal__img" />
-plugin_dashboard_delivery_template_title=E-Pflicht
 
 intranda_workflow_processinspection=Pr\u00FCf-Ansicht
 plugin_workflow_processinspection_image=Erste Seite
 plugin_workflow_processinspection_fulltext=Textanfang
-
