Document upload form: add better drag + drop ux

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -89,6 +89,7 @@ plugin_rest_usercreation_ariaLabel_pageHelp=Seitenhilfe anzeigen
 plugin_rest_usercreation_back=Zur\u00FCck
 plugin_rest_usercreation_backToLogin=Zurück zum Login
 plugin_rest_usercreation_createInstitution=Absenden
+plugin_dashboard_delivery_uploadFormSend=Absenden
 plugin_rest_usercreation_goToHelpPages=Zu den Hilfeseiten wechseln
 plugin_rest_usercreation_helpText_email=Geben Sie bitte Ihre E-Mail-Adresse an. An diese Adresse senden wir den Best\u00E4tigungslink, mit dem Sie Ihre Registrierung best\u00E4tigen. Sie k\u00F6nnen sich dann auch mit dieser Adresse und Ihrem Passwort anmelden.
 plugin_rest_usercreation_helpText_firstname=Bitte tragen Sie Ihren Vornamen ein.
@@ -268,4 +269,4 @@ plugin_dashboard_delivery_template_title=E-Pflicht
 intranda_workflow_processinspection=Pr\u00FCf-Ansicht
 plugin_workflow_processinspection_image=Erste Seite
 plugin_workflow_processinspection_fulltext=Textanfang
-
+plugin_dashboard_delivery_uploadFormBtn=Laden Sie eine Datei hoch
