Add upload modal for URLs

--- a/plugin/messages_de.properties
+++ b/plugin/messages_de.properties
@@ -280,4 +280,4 @@ plugin_dashboard_delivery_existingData_helpImg=<img src="template/assets/img/Pla
 intranda_workflow_processinspection=Pr\u00FCf-Ansicht
 plugin_workflow_processinspection_image=Erste Seite
 plugin_workflow_processinspection_fulltext=Textanfang
-plugin_dashboard_delivery_uploadFormBtn=Laden Sie eine Datei hoch
+plugin_dashboard_delivery_uploadFormBtn=W\u00E4hlen Sie eine Datei aus
